@@ -22,29 +22,28 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-package org.spongepowered.forge.applaunch.loading.moddiscovery.provider;
+package org.spongepowered.forge.lang.provider;
 
 import net.minecraftforge.forgespi.language.ILifecycleEvent;
 import net.minecraftforge.forgespi.language.IModLanguageProvider;
 import net.minecraftforge.forgespi.language.ModFileScanData;
 
-import java.util.Collections;
+import java.util.Map;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 
-public final class SpongeAPIModLanguageProvider implements IModLanguageProvider {
+public final class SpongeModLanguageProvider implements IModLanguageProvider {
 
-    private static final String NAME = "spongeapi";
+    private static final String NAME = "sponge";
 
     @Override
     public String name() {
-        return SpongeAPIModLanguageProvider.NAME;
+        return SpongeModLanguageProvider.NAME;
     }
 
     @Override
     public Consumer<ModFileScanData> getFileVisitor() {
-        return sd -> sd.addLanguageLoader(Collections.singletonMap(SpongeAPIModLanguageProvider.NAME,
-                new DummySpongeModLoader(SpongeAPIModLanguageProvider.NAME)));
+        return sd -> sd.addLanguageLoader(Map.of("sponge", new DummySpongeModLoader("sponge"), "spongeapi", new DummySpongeModLoader("spongeapi")));
     }
 
     @Override
